--- a/params.yaml
+++ b/params.yaml
@@ -1,4 +1,8 @@
 image_name1:
-    image_filepath: "../input_data/ZM131_5B_136_roi_0.ome.tif"
-    roi_filepath: "../input_data/ZM131_5B_136_roi_0.ome.tif-1105078-rois.csv"
+    image_filepath: "../input_data/ZM131_10B_286_roi_A.ome.tif"
+    roi_filepath: "../input_data/ZM131_10B_286_roi_A.ome.tif-1106483-rois.csv"
     markers_filepath: "../input_data/markers.csv"
+    mask_nuclei:
+        filepath: "../input_data/nucleiRingOutlines.tif"
+    mask_cell:
+        filepath: "../input_data/cellRingOutlines.tif"
